--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "David Velasco",
   "license": "ISC",
   "peerDependencies": {
-    "vue": "^3.0.0-rc.2"
+    "vue": "^3.0.7"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
-    "rollup": "^2.22.1",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "typescript": "^3.9.7",
-    "vue": "^3.0.0-rc.2"
+    "rollup": "^2.41.5",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.2.3",
+    "vue": "^3.0.7"
   }
 }
